--- a/index.htm
+++ b/index.htm
@@ -294,13 +294,13 @@
 	
 
 
-	<audio src="bgmMusic" src="lovebgm.mp3" autoplay="autoplay" loop preload="auto" type="audio/mp3"></audio>
+	<audio id="bgmMusic" src="lovebgm.mp3" autoplay="autoplay" loop preload="auto" type="audio/mp3"></audio>
 
 	
 	<script src="jquery.min.js" tppabs="http://libs.baidu.com/jquery/1.8.3/jquery.min.js"></script>
 	<script src="all.min.js" ></script>
 	<script src="love.min.js" ></script>
-	<div class="mPower"><span src="on" title="点击暂停" style=""></span><span src="off" title="点击播放"  style=""></span></div>
+	<div class="mPower"><span id="on" title="点击暂停" style=""></span><span id="off" title="点击播放"  style=""></span></div>
 
 	
 </body>
