--- a/index.htm
+++ b/index.htm
@@ -293,13 +293,26 @@
 	<div class="nojavascript">您的浏览器禁用了javascript，无法正常浏览本页面</div>
 	
 
-	<audio id="bgmMusic" src="lovebgm.mp3" autoplay="autoplay" loop preload="auto" type="audio/mp3"></audio>
-
+ <audio src="lovebgm.mp3" id="dd" autoplay="autoplay"  loop="loop"></audio>
+	<button onclick="dt()">停止播放</button>
+<button onclick="st()">开始播放</button>
+<button onclick="rs()">重置播放</button>
 	
-	<script src="jquery.min.js" tppabs="http://libs.baidu.com/jquery/1.8.3/jquery.min.js"></script>
-	<script src="all.min.js" ></script>
-	<script src="love.min.js" ></script>
-	<div class="mPower"><span id="on" title="点击暂停" style=""></span><span id="off" title="点击播放"  style=""></span></div>
+<script type="text/javascript">
+	function dt(){
+		var dd = document.getElementById("dd")
+		dd.pause()
+	}
+	function st(){
+		var dd = document.getElementById("dd")
+		dd.play()
+	}
+	function rs(){
+		var dd = document.getElementById("dd")
+		dd.load()
+	}
+</script>
+
 
 	
 </body>
