--- a/index.htm
+++ b/index.htm
@@ -31,8 +31,8 @@
 				<p class="text2">按键盘 "↓" <span id="text-78" contenteditable="true">开始我们的故事</span></p>
 			</div>
 			<div id="/section-1/page-2" class="ft-page page-2" data-id="page-2">
-				<p class="top-text" id="text-1" contenteditable="true">过去的范紫莫一直是一个人生活，享受着孤独，也憧憬着爱情。</p>
-				<img src="img/iali63.jpg" tppabs="img/iali63.jpg"  alt="过去的范紫莫一直是一个人生活，享受着孤独，也憧憬着爱情。" />
+				<p class="top-text" id="text-1" contenteditable="true">过去的我一直是一个人生活，享受着孤独，也憧憬着爱情。</p>
+				<img src="img/iali63.jpg" tppabs="img/iali63.jpg"  alt="过去的我一直是一个人生活，享受着孤独，也憧憬着爱情。" />
 			</div>
 			<div id="/section-1/page-3" class="ft-page page-3 left-img" data-id="page-3">
 				<h2 class="text" id="text-2" contenteditable="true">一个人的长廊</h2>
